prevent horizontal scrolling - issue #36

--- a/static/css/kanji-alive.css
+++ b/static/css/kanji-alive.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 @font-face {
   font-family: 'mplus-1m-light';
   src: url('/static/css/fonts/mplus-1m-light-webfont.eot');
